--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -31,6 +31,7 @@ header{
 h1 > span{
 	font-weight: normal;
 }
+p{font-size:13px;}
 /* ================================= 
   Image Section Styles
 ====================================*/
